# AIReceptionist

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  railway.toml  seed.py
alembic/: env.py
alembic/versions/: 373f174f1b59_add_services_hours_address_to_businesses.py  51fec6f5e0f3_add_source_estimate_to_jobs_channel_to_.py  5608798bd864_add_voice_greeting_and_system_prompt_to_.py  83e0a98f79d6_add_invites_table.py  8d31fb7eb164_add_reminder_sent_to_jobs.py  a54cd8c083f6_initial.py  f625b2e0b8fc_add_owner_auth0_id_to_businesses.py
app/: auth.py  config.py  database.py  events.py  limiter.py  main.py  models.py  scheduler.py  schemas.py  sentry.py
app/agent/: agent.py  claude.py  conversation.py  tools.py
app/middleware/: errors.py
app/routes/: admin.py  auth.py  businesses.py  conversations.py  customers.py  dashboard.py  events.py  invites.py  jobs.py  technicians.py  timeslots.py  webhooks.py
app/services/: conversation.py
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  railway.toml  vite.config.js
frontend/src/: App.jsx  DataContext.jsx  api.js  data.js  icons.jsx  index.css
frontend/src/admin/: AdminApp.jsx  AdminDashboard.jsx  AdminLogin.jsx  BusinessList.jsx  InviteModal.jsx  NewBusinessModal.jsx  (+1 more)
tests/: conftest.py  test_admin.py  test_booking_flow.py  test_businesses.py  test_conversations.py  test_customers.py  test_dashboard.py  test_errors.py  test_health.py  test_invites.py  test_jobs.py  test_technicians.py  test_timeslots.py
(+10 files in other folders)
