[project]
name = "aireceptionist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.103.1",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "greenlet>=3.5.0",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.29",
    "sqlalchemy>=2.0.49",
    "twilio>=9.10.9",
    "uvicorn>=0.47.0",
]
